--- a/GoL/GoL.fsproj
+++ b/GoL/GoL.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Files.fs" />
     <Compile Include="TheBrain.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
