--- a/Javascript/package.json
+++ b/Javascript/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx esbuild --bundle gameboard.js --outfile=bundle.js --watch"
+    "start": "npx esbuild --bundle gameboard.js --outfile=bundle.js --loader:.js=jsx --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "esbuild": "^0.14.39",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
